--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 p,
 h1,
 h2,
@@ -11,10 +17,55 @@ ul,
 ol {
   margin: 0;
   padding-left: 0;
-  
 }
+
 ul {
   list-style: none;
+}
+
+.container {
+  width: 1200px;
+  padding: 94px 0 94px 0;
+  margin: 0;
+}
+
+.header-navigation {
+  display: flex;
+  align-items: center;
+}
+.div {
+  margin: 0;
+}
+
+.header-nav {
+  padding-left: 93px;
+  display: flex;
+  gap: 50px;
+  text-align: center;
+  margin: 0;
+}
+
+.header-container {
+  display: flex;
+  margin: 0;
+}
+
+.contact {
+  display: flex;
+  gap: 50px;
+  text-align: center;
+  padding-left: 344px;
+}
+
+.list {
+  display: flex;
+  gap: 30px;
+}
+.portfolio {
+  display: flex;
+  row-gap: 15px;
+  flex-wrap: wrap;
+  column-gap: 15px;
 }
 /*Властивість кнопок*/
 button {
@@ -23,12 +74,23 @@ button {
 address {
   font-style: normal;
 }
+.gallery-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+ }
+
+.list-item {
+  width: calc((100%-120px) / 4);
+
+ }
 /*Властивості картинок*/
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
+
 /*Прибирає базові властивості посилань */
 .link {
   text-decoration: none;
@@ -39,7 +101,7 @@ img {
   --main-title-color: #ffffff;
   --body-title-color: #212121;
   --body-text-color: #757575;
-  --blue-title-color: #2196f3;
+  --accent-color: #2196f3;
 }
 /* header */
 .logo {
@@ -56,8 +118,8 @@ img {
 .contact-link-mail:hover,
 .contact-link-mail:focus,
 .contact-link-tel:hover,
-.contact-link-tel:focus{
-  color: var(--blue-title-color);
+.contact-link-tel:focus {
+  color: var(--accent-color);
 }
 
 .header {
@@ -65,73 +127,123 @@ img {
   font-size: 14px;
   line-height: 2;
   color: var(--body-title-color);
+  border: 1px rgba(236, 236, 236, 1);
 }
 /* Властивості навігації*/
 .header-nav-link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color:var(--body-title-color);
+  color: var(--body-title-color);
+  min-width: 45px;
+  min-height: 16px;
+  display: inline-block;
 }
 
 /*контакти*/
- .contact-link-mail, .contact-link-tel {
+.contact-link-mail,
+.contact-link-tel {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color:  var(--body-text-color);
+  color: var(--body-text-color);
+  min-width: 122px;
+  min-height: 16px;
+  display: inline-block;
 }
 
 /*Акцент кольору на посилання studio*/
 .header-studio {
-  color:var(--blue-title-color)
+  color: var(--accent-color);
 }
 /*Акцент кольору на посилання portfolio*/
 .header-portfolio {
-  color:var(--blue-title-color)
+  color: var(--accent-color);
 }
 /*прибирає маркери*/
 .list {
   marker: none;
+  padding: 0;
+  margin: 0;
+}
+.img-list {
+  margin-right: 215px;
+  margin-left: 215px;
+}
+.list-address {
+  marker: none;
+  padding: 0;
+  margin: 0;
 }
 .work-title {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
+.about-work {
+  padding-left:215px;
+  padding-right: 215px;
 
+  
+}
 .work-text {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--body-text-color);
+  width: 270px;
+  min-height: 48px;
 }
 
 .hero {
   text-align: center;
   background-color: #2f303a;
   color: var(--main-title-color);
-}
+  width: 696px;
+  height: 120px;
+  padding: 200px 452px 280px 452px;
+  }
+
 .hero-title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
+  text-align: center;
+  margin-bottom: 30px;
   text-transform: uppercase;
+  width: 696px;
+  height: 120px;
 }
 /*стилізація кнопки*/
 .btn {
-  background-color: var(--blue-title-color);
-}
+  background-color: var(--accent-color);
+  padding: 10px 32px 10px 32px;
+  width: 216px;
+  height: 50px;
+  text-align: center;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-title-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin: 10px 20px 10px -500px;
+ }
+
 .color-header {
   background: var(--grey);
   width: 1600px;
+  margin-left: 215px;
+  margin-right: 215px;
 }
 
 .section-title {
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  text-align: center;
+  padding-bottom: 50px;
 }
 .section-title-name {
   font-weight: 500;
@@ -139,6 +251,8 @@ img {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .section-text {
   font-size: 16px;
@@ -149,6 +263,9 @@ img {
 }
 .color-footer {
   background-color: #2f303a;
+  width: 1385px;
+  height: 252px;
+  padding-left: 215px;
 }
 .logo-studio {
   font-family: "Raleway";
@@ -175,37 +292,50 @@ img {
   color: var(--main-title-color);
 }
 
-
 .color-mail:hover,
 .color-mail:focus,
 .color-tel:hover,
 .color-tel:focus {
-  color: var(--blue-title-color);
+  color: var(--accent-color);
 }
 
 .color-mail,
 .color-tel {
   letter-spacing: 0.03em;
-  color:  var(--body-text-color);
-  }
-  .color-maps {
+  color: var(--body-text-color);
+}
+.color-maps {
   letter-spacing: 0.03em;
-  color:  var(--main-title-color);
-  }
+  color: var(--main-title-color);
+}
 /*Портфоліо*/
+.cursor {
+  padding: 50px;
+  text-align: center;
+   gap: 8px;
+}
 
- .cursor .cursor-btn {
+.cursor .cursor-btn {
   background: #f5f4fa;
   border-radius: 4px;
   border: #f5f4fa;
+  display: inline-block;
+  text-align: center;
+  min-width: 73px;
+  min-height: 38px;
+  padding: 6px 25px 6px 25px;
 }
-.cursor-btn:hover, .cursor-btn:focus  {
- color: var(--main-title-color);
- background-color: var(--blue-title-color);
- }
+.cursor-btn:hover,
+.cursor-btn:focus {
+  color: var(--main-title-color);
+  background-color: var(--accent-color);
+}
 
-
-
+.portfolio {
+  border: 1px rgba(238, 238, 238, 1);
+  margin-left: 215px;
+  margin-right: 215px;
+}
 /*portfolio-title  скриває заголовок*/
 .portfolio-title,
 .visually-hidden {
@@ -224,6 +354,7 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 .portfolio-text {
   font-size: 16px;
