--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 p,
 h1,
 h2,
@@ -13,6 +7,12 @@ h5,
 h6 {
   margin: 0;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 ul,
 ol {
   margin: 0;
@@ -22,19 +22,64 @@ ol {
 ul {
   list-style: none;
 }
-
-.container {
-  width: 1200px;
-  padding: 94px 0 94px 0;
-  margin: 0;
+:root {
+  --main-title-color: #ffffff;
+  --body-title-color: #212121;
+  --body-text-color: #757575;
+  --accent-color: #2196f3;
+  --card-set-gap: 30px;
+  --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
+.container {
+  width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header {
+  padding: 24px 0;
+}
 .header-navigation {
   display: flex;
   align-items: center;
 }
 .div {
   margin: 0;
+  display: flexbox;
+}
+.card {
+  box-shadow: var(--card-shadow);
+  border-radius: 4px;
+  overflow: hidden;
+  align-items: flex-start;
+}
+.card-content {
+  padding: 15px;
+}
+.card-thumb {
+  max-width: 100%;
+  height: auto;
+ 
+}
+.card-set {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * var(--card-set-gap));
+   list-style: none;
+  }
+
+.card-set > .item {
+  flex-basis: calc((100%-30px) / 4);
+  margin-left: var(--card-set-gap);
+  margin-top: var(--card-set-gap);
+ 
 }
 
 .header-nav {
@@ -42,7 +87,7 @@ ul {
   display: flex;
   gap: 50px;
   text-align: center;
-  margin: 0;
+  margin-left: 93px;
 }
 
 .header-container {
@@ -54,13 +99,9 @@ ul {
   display: flex;
   gap: 50px;
   text-align: center;
-  padding-left: 344px;
+  margin-left: auto;
 }
 
-.list {
-  display: flex;
-  gap: 30px;
-}
 .portfolio {
   display: flex;
   row-gap: 15px;
@@ -74,22 +115,6 @@ button {
 address {
   font-style: normal;
 }
-.gallery-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
- }
-
-.list-item {
-  width: calc((100%-120px) / 4);
-
- }
-/*Властивості картинок*/
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
 
 /*Прибирає базові властивості посилань */
 .link {
@@ -97,12 +122,6 @@ img {
   color: inherit;
 }
 
-:root {
-  --main-title-color: #ffffff;
-  --body-title-color: #212121;
-  --body-text-color: #757575;
-  --accent-color: #2196f3;
-}
 /* header */
 .logo {
   font-family: "Raleway";
@@ -122,12 +141,10 @@ img {
   color: var(--accent-color);
 }
 
-.header {
+.body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
-  line-height: 2;
   color: var(--body-title-color);
-  border: 1px rgba(236, 236, 236, 1);
 }
 /* Властивості навігації*/
 .header-nav-link {
@@ -165,11 +182,16 @@ img {
   marker: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  gap: var(--card-set-gap);
 }
 .img-list {
-  margin-right: 215px;
-  margin-left: 215px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: var(--card-set-gap);
 }
+
 .list-address {
   marker: none;
   padding: 0;
@@ -182,11 +204,10 @@ img {
   text-transform: uppercase;
   margin-bottom: 10px;
 }
-.about-work {
-  padding-left:215px;
-  padding-right: 215px;
 
-  
+.section .work {
+  padding-left: 215px;
+  padding-right: 215px;
 }
 .work-text {
   line-height: 1.71;
@@ -200,10 +221,8 @@ img {
   text-align: center;
   background-color: #2f303a;
   color: var(--main-title-color);
-  width: 696px;
-  height: 120px;
-  padding: 200px 452px 280px 452px;
-  }
+  padding: 200px 0;
+}
 
 .hero-title {
   font-weight: 900;
@@ -211,15 +230,12 @@ img {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-align: center;
-  margin-bottom: 30px;
   text-transform: uppercase;
-  width: 696px;
-  height: 120px;
+  margin: 0 auto;
 }
 /*стилізація кнопки*/
 .btn {
   background-color: var(--accent-color);
-  padding: 10px 32px 10px 32px;
   width: 216px;
   height: 50px;
   text-align: center;
@@ -228,14 +244,12 @@ img {
   color: var(--main-title-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  margin: 10px 20px 10px -500px;
- }
+  border: none;
+  margin-top: 30px;
+}
 
-.color-header {
-  background: var(--grey);
-  width: 1600px;
-  margin-left: 215px;
-  margin-right: 215px;
+.section {
+  padding: 94px 0;
 }
 
 .section-title {
@@ -252,7 +266,7 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   padding-top: 30px;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 .section-text {
   font-size: 16px;
@@ -263,9 +277,7 @@ img {
 }
 .color-footer {
   background-color: #2f303a;
-  width: 1385px;
-  height: 252px;
-  padding-left: 215px;
+  padding: 60px 1154px 60px 215px;
 }
 .logo-studio {
   font-family: "Raleway";
@@ -312,16 +324,17 @@ img {
 .cursor {
   padding: 50px;
   text-align: center;
-   gap: 8px;
+  gap: 8px;
 }
-
+ .button-list {
+  text-align: center;
+}
 .cursor .cursor-btn {
   background: #f5f4fa;
   border-radius: 4px;
   border: #f5f4fa;
   display: inline-block;
-  text-align: center;
-  min-width: 73px;
+   min-width: 73px;
   min-height: 38px;
   padding: 6px 25px 6px 25px;
 }
@@ -331,11 +344,6 @@ img {
   background-color: var(--accent-color);
 }
 
-.portfolio {
-  border: 1px rgba(238, 238, 238, 1);
-  margin-left: 215px;
-  margin-right: 215px;
-}
 /*portfolio-title  скриває заголовок*/
 .portfolio-title,
 .visually-hidden {
