--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ body {
 }
 
 .card-set > .item {
-  width: calc((100% - 90px) / 3);
+  width: calc((100% - 60px) / 3);
   border: 1px solid #eeeeee;
   background: #FFFFFF;
 }
@@ -97,15 +97,13 @@ body {
   align-items: center;
 }
 
-.portfolio {
-  display: flex;
-  row-gap: 15px;
-  flex-wrap: wrap;
-  column-gap: 15px;
- }
+
 /*Властивість кнопок*/
 button {
   cursor: pointer;
+}
+.address {
+  margin-top: 20px;
 }
 address {
   font-style: normal;
@@ -189,6 +187,9 @@ address {
   marker: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
 }
 .work-title {
   font-size: 14px;
@@ -197,7 +198,9 @@ address {
   text-transform: uppercase;
   margin-bottom: 10px;
 }
-
+.work {
+  padding-bottom: 0;
+}
 .section > .work {
   padding-left: 215px;
   padding-right: 215px;
@@ -257,8 +260,8 @@ address {
   background: #F5F4FA;
 }
 .item-command > .name-work {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .section-title-name {
   font-weight: 500;
@@ -329,6 +332,7 @@ address {
   letter-spacing: 0.03em;
   color: var(--main-title-color);
   margin-bottom: 9px;
+  display: inline-block;
 }
 
 .button-list {
@@ -348,6 +352,9 @@ address {
   min-width: 73px;
   min-height: 38px;
   padding: 6px 25px 6px 25px;
+  font-weight: 500;
+  font-family: inherit;
+  font-size: 16px;
 }
 .cursor-btn:hover,
 .cursor-btn:focus {
